chnged div h3 title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Lake Michigan</h3>
         </div>
         <div class="panel" style="background-image: url('https://user-images.githubusercontent.com/73184313/125674085-884bed8f-d0ac-4822-8043-fd76c3f5653c.jpeg')" >
-            <h3>City on the Water</h3>
+            <h3>Lincoln Park</h3>
         </div>
         <div class="panel" style="background-image: url('https://user-images.githubusercontent.com/73184313/125674090-1b00d896-62c5-49a3-8642-7f0487ec1172.jpeg')" >
             <h3>Sunsets in Chicago</h3>
